--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,3 @@
-# gem install rails -v 6.1.7.3
-# rails _6.1.7.3_ new test_app
-# docker compose -f docker-compose.yml up
-# docker compose run rails  bash
-
 version: '3.9'
 
 name: rails6dummy
@@ -21,6 +16,7 @@ services:
     tty: true
     stdin_open: true
     image: iamteacher/rails7:latest
+    working_dir: /home/lucky/rails6dummy
     volumes:
       - .:/home/lucky/rails6dummy
     ports:
